# safeshipping-archive

./: .gitattributes  .gitignore  Dockerfile  README.md  archive.sh  cleanup_root.sh  deploy.sh  deploy_prod.sh  docker_build_be_image.sh  docker_build_fe_image.sh  organize.sh  package-lock.json  package.json  ssl-bootstrap.sh
Word_Docs/: 1) SafeShipping intro.docx  2) SafeShipping at Scale Global Trade.docx  3) SafeShippng at Scale US Distribution.docx  4) SafeShipping Grant Programs.docx  5) SafeShipping Grant Proposal Ranking.docx  6) SafeShipping Proposal Process.docx  7) SafeShipping Grant Submission.docx  Architecture Strategy.pdf.docx  SafeShipping Pitch Deck Global.pptx  SafeShipping Pitch Deck National.pptx  SafeShipping User Flow.docx  💼 SafeShipping US Business Model.docx  🚀 SafeShipping Lifecycle Demo Handoff.docx
backend/: Dockerfile  requirements.txt
config/: README.md
contracts/: Cargo.toml  Makefile  README.md
contracts/safeshipping/: Cargo.toml  Makefile  cli.js  config.js  echo-server.js  job-runner.js  log-viewer.js  replay.js  retry.js  search-ledger.js  test-event-id.js
contracts/safeshipping/logs/v2u-core/: ledger.ndjson  log-2025-06-18T23-21-36-939Z.json  log-2025-06-18T23-27-19-135Z.json  log-2025-06-18T23-35-56-074Z.json  log-2025-06-18T23-38-52-557Z.json  log-2025-06-18T23-42-19-177Z.json  log-2025-06-18T23-42-39-378Z.json  log-2025-06-18T23-43-14-922Z.json  log-2025-06-18T23-49-13-293Z.json  log-2025-06-18T23-51-05-119Z.json
contracts/safeshipping/src/: lib.rs
contracts/safeshipping/utils/: path-utils.js
deployment/: README.md
(+148 files in other folders)
