[package]
name = "safeshipping_contract"
version = "0.1.0"
edition = "2021"

[features]
default = []
emit-webhook = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
validator = { version = "0.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
log = "0.4"
schemars = "0.8"
lazy_static = "1.5.0"
regex = "1"
once_cell = "1.18"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "js", "serde"] }
web-sys = { version = "0.3", features = ["console"] }
